3.5.14
- Added some cache to improve performance. 

3.5.13
- Supported restoring timer of gallop effect when getting mounted.

3.5.12
- Restricted effects updating only on recorded ones thus prevented updating already ignored effects. e.g. Restoring Focus whith Mighty Chudan is supported now.  

3.5.11b
- Fixed bugs produced in 3.5.11 and removed redundant caches.

3.5.11
- Adjusted policies to strict ability matching e.g. Summoner's Armor duration won't be put into Blastbones, Skeletal Mage, and Spirit Mender.

3.5.10
- Adjusted a policy to ignore simple word in description matching. e.g. Unstable Wall duration won't be put into Barrier in Japanese client.

3.5.9
- Used a multi dimensional data to represent the priority of a effect so that both features in v3.5.8 and v3.5.2 are compatible.  

3.5.8
- Adjusted effects priority based on current group member role. e.g. Stagger in Stone Giant is ignored for tank, but kept for dps.

3.5.7
- Adjusted parsing method to be compatible with a zos literal bug in the description of Shrouded Daggers of German language version. 

3.5.6
- Ignored effects duration brought by action end e.g. 6 sec Major Breach after 3 sec warden's Scorch.
- Ignored extra effects duration when the main effect duration can still exists e.g. Beast Trap's duration switch from 60s to 18s but Bound Armaments' duration doesn't switch from 40s to 10s. 

3.5.5
- Filtered abnormal result of api GetAbilityDuration that cause duration after some activation ended suddenly e.g. Bound Armament's duration now can be fully displayed.    

3.5.4
- Added mounting condition in comparing multiple effects priorities e.g. Charging Maneuver's duration is now 30 sec when mounted. 

3.5.3
- Added a new policy to acquire duration infomation from action description e.g. dragonknight's Inhale is now with a duration.

3.5.2a
- Improved the newly added policy to ignore the overriden effects duration.

3.5.2