@@ -1,38 +1,43 @@
 local put = ActionDurationReminder.putText
 put("Account Wide Configuration","Account Wide Configuration")
-put("Multiple Target Tracking", "Multiple Target Tracking")
-put("Seconds to Keep Timers After Timeout","Seconds to Keep Timers After Timeout")
-put("Seconds of Ignorable Short Timers","Seconds of Ignorable Short Timers")
-put("Shift Bar Enabled","Shift Bar Enabled")
-put("Shift Bar Location","Shift Bar Location")
-put("Move Shift Bar","Move Shift Bar")
+put("ADR Shift Bar Frame","ADR Shift Bar Frame")
+put("Auto Move Attribute Bars","Auto Move Attribute Bars")
+put("Bar","Bar")
+put("Clear When Combat End","Clear When Combat End")
+put("Core","Core")
+put("Enabled","Enabled")
+put("Font Name","Font Name")
+put("Font Size","Font Size")
+put("Font Style","Font Style")
 put("Label Font Name","Label Font Name")
 put("Label Font Size","Label Font Size")
-put("Stack Label Font Name","Stack Label Font Name")
-put("Stack Label Font Size","Stack Label Font Size")
-put("Label Vertical Offset","Label Vertical Offset")
-put("Label Vertical Offset In Shift Bar","Label Vertical Offset In Shift Bar")
+put("Label Font Style","Label Font Style")
 put("Label Ignore Decimal Part","Label Ignore Decimal Part")
 put("Label Ignore Decimal Part Threshold","Label Ignore Decimal Part Threshold")
+put("Label Vertical Offset","Label Vertical Offset")
+put("Label Vertical Offset In Shift Bar","Label Vertical Offset In Shift Bar")
+put("Line Color","Line Color")
 put("Line Enabled","Line Enabled")
 put("Line Thickness","Line Thickness")
 put("Line Opacity %","Line Opacity %")
-put("Line Color","Line Color")
-put("Popup Alert","Popup Alert")
-put("Enabled","Enabled")
 put("Move Alert Frame","Move Alert Frame")
+put("Move Shift Bar","Move Shift Bar")
+put("Multiple Target Tracking", "Multiple Target Tracking")
+put("Patch","Patch")
+put("Patterns of Black List in line","Patterns of Black List in line")
+put("Patterns of White List in line","Patterns of White List in line")
+put("Popup Alert","Popup Alert")
+put("Remove When Cast Again","Remove When Cast Again")
+put("Seconds of Ignorable Short Timers","Seconds of Ignorable Short Timers")
+put("Seconds to Keep Timers After Timeout","Seconds to Keep Timers After Timeout")
+put("Seconds to Show","Seconds to Show")
+put("Seconds to Show Before End","Seconds to Show Before End")
+put("Shift Bar Enabled","Shift Bar Enabled")
+put("Shift Bar Location","Shift Bar Location")
 put("Sound Enabled","Sound Enabled")
 put("Sound Select Index","Sound Select Index")
 put("Sound Test","Sound Test")
-put("Seconds to Show Before End","Seconds to Show Before End")
-put("Seconds to Show","Seconds to Show")
-put("Font Name","Font Name")
-put("Font Size","Font Size")
-put("ADR Shift Bar Frame","ADR Shift Bar Frame")
-put("Remove When Cast Again","Remove When Cast Again")
-put("Patterns of White List in line","Patterns of White List in line")
-put("Patterns of Black List in line","Patterns of Black List in line")
-put("Core","Core")
-put("Bar","Bar")
-put("Clear When Combat End","Clear When Combat End")
+put("Stack Label Font Name","Stack Label Font Name")
+put("Stack Label Font Size","Stack Label Font Size")
+put("Stack Label Font Style","Stack Label Font Style")
 put("Track Quickslot","Track Quickslot")
