@@ -8,8 +8,10 @@ put("Shift Bar Location","上位技能条位置")
 put("Move Shift Bar","移动上浮技能条")
 put("Label Font Name","标签字体名")
 put("Label Font Size","标签字体大小")
+put("Label Font Style","标签字体风格")
 put("Stack Label Font Name","计数标签字体名")
 put("Stack Label Font Size","计数标签字体大小")
+put("Stack Label Font Style","计数标签字体风格")
 put("Label Vertical Offset","标签垂直位移")
 put("Label Vertical Offset In Shift Bar","上浮技能条中标签垂直位移")
 put("Label Ignore Decimal Part","标签忽略小数")
@@ -28,6 +30,7 @@ put("Seconds to Show Before End","结束提前几秒开始显示")
 put("Seconds to Show","显示几秒")
 put("Font Name","字体名称")
 put("Font Size","字体大小")
+put("Font Style","字体风格")
 put("ADR Shift Bar Frame","ADR上浮技能条外框")
 put("Remove When Cast Again","重复施放时移除")
 put("Patterns of White List in line","白名单模板（按行输入）")
