@@ -19,12 +19,14 @@ local barSavedVarsDefaults
     barShiftOffsetY = 5,
     barLabelFontName = "BOLD_FONT",
     barLabelFontSize = 18,
+    barLabelFontStyle = 'thick-outline',
     barLabelYOffset = 0,
     barLabelYOffsetInShift = 0,
     barLabelIgnoreDecimal = true,
     barLabelIgnoreDeciamlThreshold = 10,
     barStackLabelFontName = "BOLD_FONT",
     barStackLabelFontSize = 18,
+    barStackLabelFontStyle = 'thick-outline',
     barCooldownVisible = true,
     barCooldownColor = {1,1,0},
     barCooldownOpacity = 100,
@@ -272,6 +274,14 @@ addon.extend(settings.EXTKEY_ADD_MENUS, function()
           width = "full",
           default = barSavedVarsDefaults.barLabelFontSize,
         },{
+          type = "dropdown",
+          name = text("Label Font Style"),
+          choices = {"thick-outline","soft-shadow-thick","soft-shadow-thin"},
+          getFunc = function() return l.getSavedVars().barLabelFontStyle end,
+          setFunc = function(value) l.getSavedVars().barLabelFontStyle = value; l.updateWidgets(views.updateWidgetFont) end,
+          width = "full",
+          default = barSavedVarsDefaults.barLabelFontStyle,
+        },{
           type = "slider",
           name = text("Label Vertical Offset"),
           min = -50, max = 50, step = 1,
@@ -321,6 +331,14 @@ addon.extend(settings.EXTKEY_ADD_MENUS, function()
           setFunc = function(value) l.getSavedVars().barStackLabelFontSize = value ; l.updateWidgets(views.updateWidgetFont) end,
           width = "full",
           default = barSavedVarsDefaults.barStackLabelFontSize,
+        },{
+          type = "dropdown",
+          name = text("Stack Label Font Style"),
+          choices = {"thick-outline","soft-shadow-thick","soft-shadow-thin"},
+          getFunc = function() return l.getSavedVars().barStackLabelFontStyle end,
+          setFunc = function(value) l.getSavedVars().barStackLabelFontStyle = value; l.updateWidgets(views.updateWidgetFont) end,
+          width = "full",
+          default = barSavedVarsDefaults.barStackLabelFontStyle,
         },{
           type = "checkbox",
           name = text("Line Enabled"),
